--- a/src/App.css
+++ b/src/App.css
@@ -3,19 +3,20 @@
 }
 
 .App-logo {
-  height: 40vmin;
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
+/* @media (prefers-reduced-motion: no-preference) {
   .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+    animation: App-logo-slide infinite 5s linear;
   }
-}
+} */
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+
+
+.App-body {
+  background-color: #5C9EAD;
+  min-height: 84vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -23,16 +24,12 @@
   font-size: calc(10px + 2vmin);
   color: white;
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
+/* 
+@keyframes App-logo-slide {
   from {
-    transform: rotate(0deg);
+    transform: translateX(100px);
   }
   to {
-    transform: rotate(360deg);
+    transform: translateX(-100px);
   }
-}
+} */
