--- a/src/App.css
+++ b/src/App.css
@@ -1,35 +1,18 @@
 .App {
   text-align: center;
+  background-color: #293241
 }
 
 .App-logo {
   pointer-events: none;
 }
 
-/* @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-slide infinite 5s linear;
-  }
-} */
-
-
-
 .App-body {
-  background-color: #5C9EAD;
   min-height: 84vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
 }
-/* 
-@keyframes App-logo-slide {
-  from {
-    transform: translateX(100px);
-  }
-  to {
-    transform: translateX(-100px);
-  }
-} */
+
