--- a/src/styling/MasonHeader.css
+++ b/src/styling/MasonHeader.css
@@ -1,13 +1,39 @@
 .MasonHeader {
-    background-color: #5C9EAD;
     min-height: 8vh;
-    color:aliceblue;
-    font-family: "Lucida Console", "Courier New", monospace;
+    color:rgb(240, 248, 255);
+    font-family:  "Courier New", "Lucida Console", monospace;
   }
 
 .grid-container {
   display: grid;
-  align-content: center;
-  justify-content: center;
-  padding-top: 50px;
+  align-content: start;
+  justify-content: start;
+  grid-template-rows: repeat(3);
+  gap: 10px;
+  grid-template-columns: 50vw 50vw;
+  font-size: 16px;
 }
+
+.item-a {
+  grid-column: 1 / 1;
+  color: #98c1d9a6;
+  padding-top: 50px;
+  padding-left: 20px;
+  text-overflow: clip;
+  white-space: nowrap;
+  overflow: hidden
+}
+
+.item-b {
+  grid-column: 2 / 2;
+  padding-top: 50px;
+  padding-left: 20px;
+}
+
+.item-c{
+  align-content: flex-start;
+  grid-column: 1 / 1;
+  padding-top: 5px;
+  color: #EE6C4D;
+}
+
