--- a/src/styling/MasonHeader.css
+++ b/src/styling/MasonHeader.css
@@ -14,7 +14,7 @@
   font-size: 16px;
 }
 
-.item-a {
+.divider {
   grid-column: 1 / 1;
   color: #98c1d9a6;
   padding-top: 50px;
@@ -24,16 +24,18 @@
   overflow: hidden
 }
 
-.item-b {
+.item-a {
   grid-column: 2 / 2;
   padding-top: 50px;
   padding-left: 20px;
+  
 }
 
-.item-c{
+.item-b{
   align-content: flex-start;
   grid-column: 1 / 1;
   padding-top: 5px;
   color: #EE6C4D;
+  padding-left: 20px;
 }
 
